--- a/template.yaml
+++ b/template.yaml
@@ -15,6 +15,9 @@ Parameters:
   BaseProjectName:
     Type: String
     Description: Base name of the project
+  ScheduleExpression:
+    Type: String
+    Description: "EventBridge cron/rate expression"
 
 # More info about Globals: https://github.com/awslabs/serverless-application-model/blob/master/docs/globals.rst
 Globals:
@@ -40,20 +43,16 @@ Resources:
       Architectures:
       - x86_64
       Events:
-        HelloWorld:
-          Type: Api # More info about API Event Source: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#api
+        ScheduledRule:
+          Type: Schedule
           Properties:
-            Path: /hello
-            Method: get
+            Schedule: !Ref ScheduleExpression
+            Enabled: true
 
 Outputs:
   # ServerlessRestApi is an implicit API created out of Events key under Serverless::Function
   # Find out more about other implicit resources you can reference within SAM
   # https://github.com/awslabs/serverless-application-model/blob/master/docs/internals/generated_resources.rst#api
-  HelloWorldApi:
-    Description: API Gateway endpoint URL for Prod stage for Hello World 
-      function
-    Value: !Sub "https://${ServerlessRestApi}.execute-api.${AWS::Region}.${AWS::URLSuffix}/Prod/hello/"
   HelloWorldFunction:
     Description: Hello World Lambda Function ARN
     Value: !GetAtt HelloWorldFunction.Arn
